corrected width and number of visible columns

--- a/src/pages/Projects/Projects.scss
+++ b/src/pages/Projects/Projects.scss
@@ -8,8 +8,8 @@
 
 .gallery-container {
     min-height: 70vh;
-    width: 80%;
-    padding: 0 10%;
+    width: 60%;
+    padding: 0 20%;
 
     .image-container {
         overflow: hidden;
